k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
        selector: redis
    spec:
      containers:
        - name: redis
          image: redis:6

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-redis-app
  labels:
    app: spring-redis-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-redis-app
  template:
    metadata:
      labels:
        app: spring-redis-app
    spec:
      containers:
        - name: spring-redis-app
          image: cabrecri/java-spring-redis
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-redis-app
  labels:
    app: spring-redis-app
spec:
  type: ClusterIP
  selector:
    app: spring-redis-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-redis-loadbalancer
  annotations:
    dev.okteto.com/generate-host: "true"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-redis-app
                port: 
                    number: 8080
